[tool.poetry]
name = "pyspark-tdd"
version = "0.1.0"
description = ""
authors = ["toohsk <toohsk@gmail.com>"]
readme = "README.md"
packages = [{include = "pyspark_tdd"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
